--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # datasource
-spring.datasource.url = jdbc:mariadb://localhost:3306/sgp
-spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-spring.datasource.username = sirh
-spring.datasource.password =sirh
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.datasource.driver-class-name = org.h2.Driver
+spring.datasource.username = sa
+spring.datasource.password =
 spring.jpa.generate-ddl=true
